# llm_playground

./: .env-example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
data/shakespeare_char/: prepare.py
notebooks/RAGs/: rag_part_1.ipynb  rag_part_2.ipynb  rag_sql.ipynb
notebooks/cv/: cv_reviewer.ipynb
notebooks/gpt/: gpt1.ipynb  gpt2.ipynb  gpt_data_setup.ipynb  tokenizer.ipynb
notebooks/langchain/: agents.ipynb  chatbots.ipynb  classification.ipynb  embedding_models.ipynb  hello_world.ipynb  semantic_search_engine.ipynb
notebooks/langsmith/: custom_evaluators.ipynb  evaluate_llm.ipynb  manage_prompts.ipynb  pairwise_evaluations.ipynb  unit_testing.ipynb
src/: __init__.py
src/gpt/: bigram.py  gpt1.py
src/llama_2/: __init__.py  inference.py  model.py
src/nano_gpt/: config.py  fineweb.py  hellaswag.py  model.py  train.py  train_gpt2.py
src/nano_gpt/log/: log_0.txt
